[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "nebulaflow"
version = "0.1.0"
description = "High-performance async document processing pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
"python-magic",
"typing-extensions"
]
[project.optional-dependencies]
dev = [
"pytest",
"pytest-asyncio",
"black",
"flake8"
]
web = [
"fastapi",
"django",
"uvicorn"
]